[package]
name = "dante_micromoveset"
version = "0.1.0"
authors = ["Mickemoose"]
edition = "2021"

[package.metadata.skyline]
titleid = "01006A800016E000" # Smash Ultimate

[lib]
crate-type = ["cdylib"]

[dependencies]
skyline = { git = "https://github.com/ultimate-research/skyline-rs.git" }
skyline_smash = { git = "https://github.com/blu-dev/skyline-smash.git", features = ["weak_l2cvalue"] }
smash_script = { git = "https://github.com/blu-dev/smash-script.git", branch = "development" }
smashline = { git = "https://github.com/hdr-development/smashline.git" }
smash_singletons = { git = "https://github.com/WuBoytH/smash_singletons.git" }
arcropolis-api = { git = "https://github.com/Raytwo/arcropolis_api" }
csk = {package = "the_csk_collection_api", git = "https://github.com/Coolsonickirby/the_csk_collection_api.git" }
param_config = { git = "https://github.com/csharpm7/lib_paramconfig.git"}

[profile.dev]
panic = "abort"

[profile.release]
opt-level = 'z'
panic = "abort"
lto = true
codegen-units = 1